@@ -13,6 +13,7 @@
 
     <properties>
         <mainClass>gg.xp.xivsupport.gui.GuiLaunch</mainClass>
+        <mainImportClass>gg.xp.xivsupport.gui.GuiImportLaunch</mainImportClass>
     </properties>
     <build>
         <plugins>
@@ -133,6 +134,59 @@
                 <version>2.1.2</version>
                 <executions>
                     <execution>
+                        <id>l4j-import-gui</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>launch4j</goal>
+                        </goals>
+                        <configuration>
+                            <chdir>.</chdir>
+                            <downloadUrl>https://www.oracle.com/java/technologies/downloads/#jdk17-windows</downloadUrl>
+
+                            <headerType>gui</headerType>
+                            <outfile>target/windows/triggevent-import.exe</outfile>
+                            <!--                            <jar>target/xivsupport-${version}-jar-with-dependencies.jar</jar>-->
+                            <jar>./launcher-${project.version}.jar</jar>
+                            <errTitle>Triggevent</errTitle>
+                            <dontWrapJar>true</dontWrapJar>
+
+                            <classPath>
+                                <mainClass>${mainImportClass}</mainClass>
+                                <addDependencies>false</addDependencies>
+                                <!--                                <preCp>anything</preCp>-->
+                                <!--                                <postCp>../deps</postCp>-->
+                                <postCp>./deps/*.jar</postCp>
+                                <!--                                <postCp>./deps</postCp>-->
+                            </classPath>
+                            <jre>
+                                <path>jre</path>
+                                <minVersion>${java.version}</minVersion>
+                                <!--                                <opts>-->
+                                <!--                                    <opt>-Djava.endorsed.dirs=./endorsed</opt>-->
+                                <!--                                </opts>-->
+                            </jre>
+                            <versionInfo>
+                                <fileVersion>1.0.0.0</fileVersion>
+                                <txtFileVersion>txt file version</txtFileVersion>
+                                <fileDescription>description</fileDescription>
+                                <copyright>2021</copyright>
+                                <productVersion>1.0.0.0</productVersion>
+                                <txtProductVersion>1.0.0.0</txtProductVersion>
+                                <productName>Triggevent</productName>
+                                <internalName>triggevent</internalName>
+                                <originalFilename>original.exe</originalFilename>
+                            </versionInfo>
+                            <messages>
+                                <bundledJreErr>You need to download Java version 17 or higher, or download the version
+                                    of Triggevent with bundled Java.
+                                </bundledJreErr>
+                                <jreVersionErr>You need to download Java version 17 or higher, or download the version
+                                    of Triggevent with bundled Java.
+                                </jreVersionErr>
+                            </messages>
+                        </configuration>
+                    </execution>
+                    <execution>
                         <id>l4j-gui</id>
                         <phase>package</phase>
                         <goals>
@@ -180,10 +234,10 @@
                                 <originalFilename>original.exe</originalFilename>
                             </versionInfo>
                             <messages>
-                                <bundledJreErr>You need to download Java version 11 or higher, or download the version
+                                <bundledJreErr>You need to download Java version 17 or higher, or download the version
                                     of Triggevent with bundled Java.
                                 </bundledJreErr>
-                                <jreVersionErr>You need to download Java version 11 or higher, or download the version
+                                <jreVersionErr>You need to download Java version 17 or higher, or download the version
                                     of Triggevent with bundled Java.
                                 </jreVersionErr>
                             </messages>
